Add alien rpg props

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -498,6 +498,11 @@
                             <h3>Video intro for Alien RPG</h3>
                             <p>Featuring Bishop from the movies, briefing (with french audio) for the Heart of Darkness campaign.</p>
                         </a>
+                        <a href="https://www.reddit.com/r/alienrpg/comments/1oxq4g7/the_wy_starter_kit/" target="_blank" rel="noopener noreferrer" class="project-card with-bg-image" style="--bg-image: url('/assets/img/alien-rpg-props-weyland-yutani.png')" role="article" aria-label="Props: t-shirt, hat, mugs for Alien RPG project">
+                            <img src="/assets/img/alien-rpg-props-weyland-yutani.png" alt=">Physical props branded Weyland-Yutani for Alien RPG" style="display:none;" loading="lazy">
+                            <h3>Physical props branded Weyland-Yutani for Alien RPG</h3>
+                            <p>T-shirt, Hat, Pen, Mugs from the emblematic corporation.</p>
+                        </a>
                         <a href="https://youtu.be/X-kTYpXv9sQ?si=BwzDn934RbJjisiW" target="_blank" rel="noopener noreferrer" class="project-card with-bg-image" style="--bg-image: url('/assets/img/alien-rpg-cethorina-erebos-video-clip.png')" role="article" aria-label="Alien RPG video clip project">
                             <img src="/assets/img/alien-rpg-cethorina-erebos-video-clip.png" alt="Cethorina and Erebos spacecraft illustrations from Heart of Darkness Alien RPG campaign" style="display:none;" loading="lazy">
                             <h3>Video clip for Alien RPG</h3>
